fix: anki web flicker

--- a/packages/note/src/styles/daisyui.css
+++ b/packages/note/src/styles/daisyui.css
@@ -1,4 +1,5 @@
 @plugin "daisyui" {
+  root: ":root:not([data-is-ankiweb])";
   themes: all;
   include:
     properties, reset, rootcolor, rootscrollgutter, rootscrolllock, svg, scrollbar, button, input, label, fieldset, select, alert, badge, toast, collapse, status, toggle, list, loading;
